<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fatty Food</string>
    <string name="fatty_food_delivery">Fatty Food Delivery</string>
    <string name="select_your_language">Select Language</string>
    <string name="get_started">Get Started</string>
    <string name="myanmar">Myanmar</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="donnot_receive_code">Didn\'t receive a code? Resend code in</string>
    <string name="otp_send_msg">OTP code will send to %s</string>
    <string name="fill_sms_code">Please fill sms code</string>
    <string name="gps_permission_title">Please enable location in setting</string>
    <string name="gps_permission_msg">If your phone brand is xiaomi, you need to choose high accuracy for gps enable</string>
    <string name="maintain_title">FATTY App is under the maintenance!</string>
    <string name="maintain_msg">Please try again later!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="intro_title_one">Find The Restaurant Near You</string>
    <string name="intro_near_you">Near you</string>
    <string name="intro_track">Track</string>
    <string name="intro_in_hour">In 1 hour</string>
    <string name="intro_dec_one">Turn on location to discover restaurants near you and enjoy precise delivery.</string>
    <string name="intro_title_two">Track your Food &amp; Parcel instantly</string>
    <string name="intro_your_parcel">Your food Parcel</string>
    <string name="intro_instantly">Instantly</string>
    <string name="intro_dec_two">Real-Time Order Tracking. Stay updated on every step for a reliable delivery.</string>
    <string name="intro_title_three">Get delivery anywhere within a fast hour.</string>
    <string name="intro_get_any_where">Get delivery anywhere</string>
    <string name="intro_dec_three">Get delicious food or parcel delivered to your door with speed, freshness, and reliability in one click.</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_no_error">Please enter correct phone number</string>
    <string name="welcome_to_fatty">Welcome To Fatty</string>
    <string name="_09"> 09 </string>
    <string name="_123456789">123456789</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="str_no_notifications">No Notifications</string>
    <string name="clear_cart_data">This action will clear previous cart data!</string>
    <string name="hyperlink_term_condition"><a href="https://www.fattyfoodmyanmar.com.mm">Terms &amp; Conditions</a></string>
    <string name="hyperlink_privacy_policy"><a href="https://www.fattyfoodmyanmar.com.mm">Privacy Policy</a></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and"> and </string>
    <string name="title_activity_verify_otpactivity">VerifyOTPActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invaild_otp">Invalid phone number or OTP code</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="continues">Continue</string>
    <string name="your_name">Name</string>
    <string name="content_desc">image desc</string>
    <string name="text_desc">text desc</string>
    <string name="setting">Setting</string>
    <string name="search_by_foods_or_restaurants">Search by Food or Restaurant</string>
    <string name="restaurants">Restaurants</string>
    <string name="top_related">Top Related</string>
    <string name="one_click_delivery">One Click Delivery</string>
    <string name="parcel">Parcel</string>
    <string name="you_might_like">You Might Like</string>
    <string name="restaurant_unavailable">Unavailable right now</string>
    <string name="near_for_you">Near For You</string>
    <string name="_5_0000_00_mmk">5,0000.00 MMK</string>
    <string name="ordering_guide">Ordering Guide</string>
    <string name="please_add_items_into_your_cart">Please add items into your cart.</string>
    <string name="no_food_items_to_checkout">No food items to checkout.</string>
    <string name="already_login_title">Already Login!</string>
    <string name="confirm">Confirm</string>
    <string name="already_login_msg">This phone number is already login from another device, please logout and try again!</string>
    <string name="force_login">Force Login</string>
    <string name="please_rate_our_service">Please rate our service</string>
    <string name="how_was_your_delivery">How was your delivery?</string>
    <string name="more_info">More Info</string>
    <string name="are_you_sure_you_want_to_send_a_parcel">Are you sure you want to send a parcel?</string>
    <string name="if_you_proceed_we_ll_call_you_to_confirm_after_you_ve_booked">If you proceed, we’ll call you to confirm after you’ve booked.</string>
    <string name="we_ve_got_your_booking">We’ve Got Your Booking!</string>
    <string name="we_ve_received_your_parcel_booking_and_you_ll_receive_an_order_confirmation_call_from_us">We’ve received your parcel booking and you’ll receive an order confirmation call from us.</string>
    <string name="view_my_parcel">View My Parcel</string>
    <string name="logout_label">Logout</string>
    <string name="logout_title">Are you sure you want ot log out?</string>
    <string name="booked_successfully">Booked Successfully!</string>
    <string name="order_id_4">Order ID: </string>
    <string name="muse">Muse</string>
    <string name="lashio">Lashio</string>
    <string name="choose_your_service_region">Choose your service region</string>
    <string name="pending_order">Pending Order</string>
    <string name="pick_up">Pick Up</string>
    <string name="on_the_way">On The Way</string>
    <string name="order_complete">Order Completed</string>
    <string name="booked_order_successfully">Booked Order Successfully!</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="payment_details">Payment Details</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="success_delivery_title">Delivered Successfully!</string>
    <string name="success_delivery_desc">Your order is delivered successfully.</string>
    <string name="rate_our">Rate Your Order</string>
    <string name="help_center">Help Center</string>
    <string name="call">Call</string>
    <string name="about_fatty">About Fatty</string>
    <string name="select_your_currency">Select Currency</string>
    <string name="str_myan_kyat">မြန်မာကျပ်</string>
    <string name="str_ch_youan">人民币</string>
    <string name="yuan">Yuan</string>
    <string name="currency">Currency</string>
    <string name="str_lang_status">Language</string>
    <string name="update_version">Update Version</string>
    <string name="please_read_the_consequences_of_deleting_your_account_permanently_before_you_delete">Please read the consequences of deleting your account permanently before you delete</string>
    <string name="yes_i_will_delete">Yes, I will delete</string>
    <string name="acc_del_title">Delete Account?</string>
    <string name="acc_del_des">Are you sure you want to delete your account? If so, you won’t be able to come back with this account.</string>
    <string name="str_del">Delete</string>
    <string name="str_cancel">Cancel</string>
    <string name="process_finish_a_few_min">The process will finish in a few seconds.</string>
    <string name="please_wait">Please wait...</string>
    <string name="all_update">You’re all set</string>
    <string name="up_to_date">Your app is up to date!</string>
    <string name="update_is_still">The version update is still in progress and hasn\'t finished yet!</string>
    <string name="str_ok">Ok</string>
    <string name="no_internet">No internet</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_internet_and_try_againg">Please check your connection and try again.</string>
    <string name="please_check_internet_connection">Please check your internet connection and reload.</string>
    <string name="try_again">Try Again</string>
    <string name="app_lated_version">Your app is on the latest version</string>
    <string name="update_fail">Sorry, update failed</string>
    <string name="delete_fail">Delete account failed</string>
    <string name="delete_success">Account deleted successfully.</string>
    <string name="other_addr">Other Address</string>
    <string name="edit">Edit</string>
    <string name="user_name">Name</string>
    <string name="change">Change</string>
    <string name="success_change_name">Account name changed successfully!</string>
    <string name="fail_change_name">Failed username change</string>
    <string name="update_now">Update Now</string>
    <string name="lorem_ipsum"><p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
    <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
    </string>
    <string name="by_continuing_you_automatically_accept_to_fatty_s">By continuing, you automatically accept to Fatty\'s <annotation flat="terms">Terms &amp; Conditions</annotation> and <annotation flat="privacy">Privacy Policy</annotation>.</string>
    <string name="recent">Recents</string>
    <string name="filter">Filter</string>
    <string name="desserts">DESSERTS</string>
    <string name="drinks">DRINKS</string>
    <string name="pay_now">Pay Now</string>
    <string name="location">Location:</string>
    <string name="no_111_lily_lorem_ipsum_dolor_sat_morem_ipsum_street_block_2_lashio">No (111), Lily lorem ipsum dolor sat morem ipsum street, Block 2, Lashio</string>
    <string name="open_hours">Open Hours:</string>
    <string name="mon_fri">Mon-Fri</string>
    <string name="_10_00am_04_30_pm">10:00AM - 04:30 PM</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="explore_now">Explore Now</string>
    <string name="enter_6_digit_code">Enter 6-digit Code</string>
    <string name="order_success">Order Success</string>
    <string name="retry">Retry</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="your_order_has_been_placed_successfully">Your order has been placed successfully.</string>
    <string name="remove_from_cart">Do you want to remove this food from cart?</string>
    <string name="login_message">Please login to order food or booking parcel</string>
    <string name="apply_filter">Apply</string>
    <string name="order_id">Order ID :</string>
    <string name="login">Login</string>
    <string name="hello">Hello</string>
    <string name="view_my_order">View My Order</string>
    <string name="txt_enter_your_phone_number">Enter your phone number</string>
    <string name="txt_edit_phone_number">Edit Phone Number</string>
    <string name="txt_current_phone_number">Current Phone Number : %s</string>
    <string name="txt_new_phone_number">New Phone Number</string>
    <string name="txt_update">Update</string>
    <string name="txt_sort_by">Sort By:</string>
    <string name="txt_recommended">Recommended</string>
    <string name="txt_nearby">Nearby</string>
</resources>