<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_ons_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="135dp"
    android:background="@drawable/bg_onboard_rounded"
    android:clickable="true"
    android:elevation="10dp"
    android:orientation="vertical"
    app:behavior_fitToContents="true"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context=".ui.views.fragments.rest_more_info.FoodAddOnBottomSheetFragment"
    android:focusable="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_large">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_circle_close_24dp"
            android:contentDescription="@string/content_desc"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_sort_by"
            android:layout_marginTop="@dimen/margin_2xlarge"
            android:textSize="18sp"
            android:textColor="@color/text_primary_01"
            android:fontFamily="@font/fatty_regular"
            android:contentDescription="@string/text_desc"/>
        <RadioGroup
            android:id="@+id/rg_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rdo_recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:checked="true"
                android:text="@string/txt_recommended"
                android:paddingStart="8dp"
                android:fontFamily="@font/fatty_regular"
                android:textSize="18sp"
                android:textColor="@color/text_primary_01"
                tools:ignore="RtlSymmetry"
                android:layout_centerVertical="true"/>
            <RadioButton
                android:id="@+id/rdo_nearby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/txt_nearby"
                android:layout_marginTop="@dimen/margin_small"
                android:paddingStart="8dp"
                android:fontFamily="@font/fatty_regular"
                android:textSize="18sp"
                android:textColor="@color/text_primary_01"
                tools:ignore="RtlSymmetry"
                android:layout_centerVertical="true"/>
        </RadioGroup>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/positive_button"
            android:fontFamily="@font/fatty_semibold"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/margin_2xlarge"
            android:text="@string/apply_filter"
            android:enabled="true"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/margin_32"
            android:textAllCaps="false"
            android:layout_alignParentBottom="true"/>
    </LinearLayout>
</LinearLayout>