<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="18dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

    <LinearLayout
        android:id="@+id/ll_body_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="18dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_semibold"
            android:text="@string/remove_from_cart"
            android:textAlignment="textStart"
            android:textColor="@color/text_primary_01"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_regular"
            android:padding="2dp"
            android:singleLine="false"
            android:layout_marginTop="8dp"
            android:text="@string/clear_cart_data"
            android:textAlignment="textStart"
            android:textColor="@color/text_primary_01"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_another_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_margin="18dp"
        android:layout_below="@id/ll_body_view">

        <TextView
            android:id="@+id/btnClose"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="45dp"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/str_cancel"
            android:textAllCaps="false"
            android:background="@drawable/negative_btn"
            android:gravity="center"/>
        <Button
            android:id="@+id/btnRemove"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="45dp"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/force_login"
            android:textAllCaps="false"
            android:layout_marginStart="18dp"
            android:background="@drawable/positive_button"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:fontFamily="@font/outfit_regular"
        android:text="@string/str_ok"
        android:textAllCaps="false"
        android:layout_marginStart="18dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ll_body_view"
        android:layout_margin="18dp"
        android:visibility="gone"
        android:background="@drawable/positive_button"/>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
