<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="18dp"
    app:cardElevation="0dp"
    app:cardMaxElevation="0dp"
    android:elevation="0dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="18dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_title"
                android:layout_centerVertical="true"
                android:text="@string/txt_edit_phone_number"
                android:textSize="18sp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="8dp"
                android:layout_toStartOf="@id/iv_close"
                android:textColor="@color/text_primary_01"
                android:fontFamily="@font/outfit_regular"/>
            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_circle_close_24dp"/>
        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/txt_current_phone_number"
            android:textSize="16sp"
            android:layout_gravity="start"
            android:textColor="@color/text_secondary_01"
            android:fontFamily="@font/outfit_regular"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_new_phone_number"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/textPrimary02"
            android:fontFamily="@font/outfit_regular"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/txt_enter_your_phone_number"
            android:background="@drawable/bg_edt"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textSize="16sp"
            android:cursorVisible="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/text_primary_01"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:fontFamily="@font/outfit_regular"
            />

        <LinearLayout
            android:id="@+id/ll_double_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:visibility="visible"
            android:layout_marginTop="18dp">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.5"
                android:text="@string/str_cancel"
                android:fontFamily="@font/outfit_regular"
                android:textColor="@color/text_primary_01"
                android:textSize="18sp"
                android:gravity="center"
                android:textAlignment="center"
                android:background="@drawable/negative_btn"
                android:textAllCaps="false"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnUpdate"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.5"
                android:text="@string/txt_update"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginStart="18dp"
                android:fontFamily="@font/outfit_regular"
                android:textAlignment="center"
                android:background="@drawable/positive_button"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>