<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title"
            android:text="@string/hello"
            android:textSize="20sp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:textColor="@color/text_primary_01"
            android:fontFamily="@font/fatty_regular"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_message"
            android:textSize="14sp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:textColor="#84878A"
            android:fontFamily="@font/fatty_regular"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/login"
            android:textAllCaps="false"
            android:fontFamily="@font/fatty_regular"
            android:textSize="18sp"
            android:background="@drawable/positive_button"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>